--- a/res/layout-port/launcher.xml
+++ b/res/layout-port/launcher.xml
@@ -17,9 +17,8 @@
 <com.android.launcher2.DragLayer
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher"
-
     android:id="@+id/drag_layer"
-    android:background="@drawable/workspace_bg"
+    android:background="#00000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
