Adjust Launcher2 layouts to avoid big paddings in lower DPIs.
Homescreens part:
make the workspace fit the screen
adjust the padding in 600dp
recalculate the gaps
force recalculate the number of rows and cols

Appdrawer part:
make the drawer fit the screen
recalculate the number of rows and cols

Dock part:
adjust the padding

Edit: edited following Jesus' comments

Change-Id: I6ba905c698e1ba0b7b9d3ef2e66194d019625049

--- a/res/values-sw600dp/dimens.xml
+++ b/res/values-sw600dp/dimens.xml
@@ -34,12 +34,12 @@
     <dimen name="hotseat_cell_height">70dp</dimen>
     <dimen name="hotseat_width_gap">-1dp</dimen>
     <dimen name="hotseat_height_gap">-1dp</dimen>
-    <dimen name="button_bar_height">94dip</dimen>
-    <dimen name="button_bar_height_bottom_padding">14dp</dimen>
-    <dimen name="button_bar_height_top_padding">20dp</dimen>
-    <dimen name="button_bar_width_left_padding">25dp</dimen>
-    <dimen name="button_bar_width_right_padding">25dp</dimen>
-    <dimen name="button_bar_height_plus_padding">104dp</dimen>
+    <dimen name="button_bar_height">82dp</dimen>
+    <dimen name="button_bar_height_top_padding">12dp</dimen>
+    <dimen name="button_bar_height_bottom_padding">12dp</dimen>
+    <dimen name="button_bar_width_left_padding">12dp</dimen>
+    <dimen name="button_bar_width_right_padding">12dp</dimen>
+    <dimen name="button_bar_height_plus_padding">82dp</dimen>
 
 <!-- Folders -->
     <!-- The size of the image which sits behind the preview of the folder contents -->
@@ -76,4 +76,7 @@
     <dimen name="workspace_width_gap_port">0dp</dimen>
     <dimen name="workspace_height_gap_land">0dp</dimen>
     <dimen name="workspace_height_gap_port">24dp</dimen>
+
+<!-- CellLayout padding land / port-->
+    <dimen name="cell_layout_top_padding_port">35dp</dimen>
 </resources>
