Revert "Adjust Launcher2 layouts to avoid big paddings in lower DPIs."
This reverts commit e8278f5a581fcedf4c3ca41e28a0ccd87cd07273.

--- a/res/layout/workspace_screen.xml
+++ b/res/layout/workspace_screen.xml
@@ -18,8 +18,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher"
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:paddingLeft="@dimen/cell_layout_left_padding"
     android:paddingRight="@dimen/cell_layout_right_padding"
     android:paddingTop="@dimen/cell_layout_top_padding"
