Add minimum number of rows and columns in workspace
Change-Id: I00eb4201681dbec4ebdc76aeff1c711a2f1965fc

--- a/res/layout-land/launcher.xml
+++ b/res/layout-land/launcher.xml
@@ -35,6 +35,8 @@
         launcher:defaultScreen="2"
         launcher:cellCountX="@integer/cell_count_x"
         launcher:cellCountY="@integer/cell_count_y"
+        launcher:minCellCountX="@integer/min_cell_count_x"
+        launcher:minCellCountY="@integer/min_cell_count_y"
         launcher:pageSpacing="@dimen/workspace_page_spacing"
         launcher:scrollIndicatorPaddingLeft="@dimen/qsb_bar_height"
         launcher:scrollIndicatorPaddingRight="@dimen/button_bar_height">
