--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -78,6 +78,9 @@
     <integer name="cell_count_x">-1</integer>
     <integer name="cell_count_y">-1</integer>
 
+    <integer name="min_cell_count_x">4</integer>
+    <integer name="min_cell_count_y">4</integer>
+
     <!-- Whether or not to use custom clings if a custom workspace layout is passed in -->
     <bool name="config_useCustomClings">false</bool>
 
