--- a/res/layout/apps_customize_pane.xml
+++ b/res/layout/apps_customize_pane.xml
@@ -78,7 +78,14 @@
                 android:visibility="gone" />
 
             <include
-                android:id="@+id/paged_view_indicator"
+                android:id="@+id/paged_view_indicator_top"
+                layout="@layout/scroll_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top" />
+
+            <include
+                android:id="@+id/paged_view_indicator_bottom"
                 layout="@layout/scroll_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
