--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -50,10 +50,6 @@
         <attr name="cellCountX" format="integer"  />
         <!-- The number of vertical cells in the CellLayout -->
         <attr name="cellCountY" format="integer"  />
-        <!-- The minimum number of horizontal cells in the CellLayout -->
-        <attr name="minCellCountX" format="integer"  />
-        <!-- The minimum number of vertical cells in the CellLayout -->
-        <attr name="minCellCountY" format="integer"  />
     </declare-styleable>
     
     <!-- Hotseat specific attributes. These attributes are used to customize
@@ -166,5 +162,35 @@
     <declare-styleable name="CustomClingTitleText">
     </declare-styleable>
     <declare-styleable name="CustomClingText">
+    </declare-styleable>
+
+    <declare-styleable name="NumberPickerPreference">
+        <attr name="defaultValue" format="integer" />
+        <attr name="max" format="integer" />
+        <attr name="min" format="integer" />
+        <attr name="maxExternal" format="string" />
+        <attr name="minExternal" format="string" />
+    </declare-styleable>
+
+    <declare-styleable name="DoubleNumberPickerPreference">
+        <attr name="defaultValue1" format="integer" />
+        <attr name="defaultValue2" format="integer" />
+        <attr name="max1" format="integer" />
+        <attr name="min1" format="integer" />
+        <attr name="max2" format="integer" />
+        <attr name="min2" format="integer" />
+        <attr name="maxExternal1" format="string" />
+        <attr name="minExternal1" format="string" />
+        <attr name="maxExternal2" format="string" />
+        <attr name="minExternal2" format="string" />
+        <attr name="pickerTitle1" format="string" />
+        <attr name="pickerTitle2" format="string" />
+    </declare-styleable>
+
+    <declare-styleable name="SeekBarDialogPreference">
+        <attr name="max" />
+        <attr name="min" />
+        <attr name="prefix" format="string" />
+        <attr name="suffix" format="string" />
     </declare-styleable>
 </resources>
