--- a/res/values-sw720dp-port/dimens.xml
+++ b/res/values-sw720dp-port/dimens.xml
@@ -49,8 +49,8 @@
 
 <!-- Hotseat -->
     <dimen name="hotseat_width_gap">14dp</dimen>
-    <dimen name="button_bar_height">126dp</dimen>
-    <dimen name="button_bar_height_plus_padding">126dp</dimen>
+    <!--dimen name="button_bar_height">126dp</dimen-->
+    <!--dimen name="button_bar_height_plus_padding">126dp</dimen-->
 
 <!-- Cling -->
     <!-- The offset for the text in the cling -->
