Added dock icon number in vertical and fixed dock grid size
Change-Id: I2029a60c0a1ae878bb447d67349bfcaee8e2ac80

--- a/res/xml/preferences_dock.xml
+++ b/res/xml/preferences_dock.xml
@@ -24,6 +24,12 @@
         android:defaultValue="@integer/hotseat_cell_count"
         launcher:max="9"
         launcher:min="3" />
+    <com.android.launcher2.preference.NumberPickerPreference android:key="ui_dock_icons_vertical"
+        android:title="@string/preferences_interface_dock_icons_vertical_title"
+        android:summary="@string/preferences_interface_dock_icons_vertical_summary"
+        android:defaultValue="@integer/hotseat_cell_count"
+        launcher:max="9"
+        launcher:min="3" />
     <com.android.launcher2.preference.SeekBarDialogPreference android:key="ui_dock_icon_scale"
         android:title="@string/preferences_interface_dock_icon_scale_title"
         android:summary="@string/preferences_interface_dock_icon_scale_summary"
