Preferences: added option to restart launcher
Change-Id: I234c676ca1440d24c29a3cb087bbd0b7d5a57c7a

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -29,4 +29,8 @@
             android:key="preferences_dock_section"
             android:title="@string/preferences_interface_dock_title" />
 
+    <Preference android:id="@+id/preferences_dock_section"
+            android:key="preferences_restart_launcher"
+            android:title="@string/preferences_restart_launcher" />
+
 </PreferenceScreen>
