Add cell_max_count for grid size While in 360dp and 320 dpi, having a grid size bigger than 6x6 made the icon text overlap
Change-Id: I76e2c8cdf734c0c936126df8e08f935fe6ce88b3

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -77,6 +77,8 @@
 
     <integer name="cell_count_x">4</integer>
     <integer name="cell_count_y">4</integer>
+    <integer name="cell_max_count_x">6</integer>
+    <integer name="cell_max_count_y">6</integer>
 
     <!-- Whether or not to use custom clings if a custom workspace layout is passed in -->
     <bool name="config_useCustomClings">false</bool>
