--- a/res/values-sw720dp/config.xml
+++ b/res/values-sw720dp/config.xml
@@ -1,6 +1,8 @@
 <resources>
     <integer name="cell_count_x">8</integer>
     <integer name="cell_count_y">5</integer>
+    <integer name="cell_max_count_x">9</integer>
+    <integer name="cell_max_count_y">9</integer>
     <integer name="hotseat_cell_count">7</integer>
     <integer name="hotseat_all_apps_index">3</integer>
     <bool name="config_largeHeap">true</bool>
