--- a/res/xml/preferences_homescreen.xml
+++ b/res/xml/preferences_homescreen.xml
@@ -25,9 +25,9 @@
             android:summary="@string/preferences_interface_homescreen_general_grid_summary"
             launcher:pickerTitle1="@string/preferences_interface_homescreen_general_grid_rows_title"
             launcher:pickerTitle2="@string/preferences_interface_homescreen_general_grid_columns_title"
-            launcher:max1="7"
+            launcher:max1="@integer/cell_max_count_x"
             launcher:min1="3"
-            launcher:max2="7"
+            launcher:max2="@integer/cell_max_count_y"
             launcher:min2="3" />
         <com.android.launcher2.preference.NumberPickerPreference android:key="ui_homescreen_screens"
             android:title="@string/preferences_interface_homescreen_general_screens_title"
