Add hotseat_max_cell_count While in 360dp and 320 dpi, using more than 7 ions in dock made them overlap
Change-Id: Ib3a0ec379f659233d8d53532723856db3f19be17

--- a/res/xml/preferences_dock.xml
+++ b/res/xml/preferences_dock.xml
@@ -22,13 +22,13 @@
         android:title="@string/preferences_interface_dock_icons_title"
         android:summary="@string/preferences_interface_dock_icons_summary"
         android:defaultValue="@integer/hotseat_cell_count"
-        launcher:max="9"
+        launcher:max="@integer/hotseat_max_cell_count"
         launcher:min="3" />
     <com.android.launcher2.preference.NumberPickerPreference android:key="ui_dock_icons_vertical"
         android:title="@string/preferences_interface_dock_icons_vertical_title"
         android:summary="@string/preferences_interface_dock_icons_vertical_summary"
         android:defaultValue="@integer/hotseat_cell_count"
-        launcher:max="9"
+        launcher:max="@integer/hotseat_max_cell_count"
         launcher:min="3" />
     <com.android.launcher2.preference.SeekBarDialogPreference android:key="ui_dock_icon_scale"
         android:title="@string/preferences_interface_dock_icon_scale_title"
