--- a/res/values-sw720dp/config.xml
+++ b/res/values-sw720dp/config.xml
@@ -4,6 +4,7 @@
     <integer name="cell_max_count_x">9</integer>
     <integer name="cell_max_count_y">9</integer>
     <integer name="hotseat_cell_count">7</integer>
+    <integer name="hotseat_max_cell_count">9</integer>
     <integer name="hotseat_all_apps_index">3</integer>
     <bool name="config_largeHeap">true</bool>
     <bool name="is_large_screen">true</bool>
