Fix drawer and remove useless preferences
Change-Id: If69bb770721a35c6809db89bbd2b1268a4c1ba30

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -20,10 +20,10 @@
             android:title="@string/preferences_interface_homescreen_title"
             android:summary="@string/preferences_interface_homescreen_summary" />
 
-    <Preference android:id="@+id/preferences_drawer_section"
+    <!--Preference android:id="@+id/preferences_drawer_section"
             android:key="preferences_drawer_section"
             android:title="@string/preferences_interface_drawer_title"
-            android:summary="@string/preferences_interface_drawer_summary" />
+            android:summary="@string/preferences_interface_drawer_summary" /-->
 
     <Preference android:id="@+id/preferences_dock_section"
             android:key="preferences_dock_section"
