Shortcuts: rename and custom icon
This is all CM work so all credits go to them.
https://github.com/CyanogenMod/android_packages_apps_Trebuchet/commit/10a908a32cab20d5fc0ee944a3b34b98a9648f68
https://github.com/CyanogenMod/android_packages_apps_Trebuchet/commit/596b71d43c5f13f2d0199ffdfeaa550e15838783
https://github.com/CyanogenMod/android_packages_apps_Trebuchet/commit/e576f6e7887b063d1b6d9a2052eedd4cc7c014ee

Change-Id: Id5b250f6e75c096ceb3beff410d9d0a6ad654ae0

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -37,7 +37,11 @@
              android:title="@string/preferences_pinch_expanded_title"
              android:defaultValue="false" />
 
-    <Preference android:id="@+id/preferences_dock_section"
+    <Preference android:key="ui_general_iconpack"
+             android:title="@string/preferences_interface_general_iconpack_title"
+             android:summary="@string/preferences_interface_general_iconpack_summary" />
+
+    <Preference android:id="@+id/restart_launcher"
             android:key="preferences_restart_launcher"
             android:title="@string/preferences_restart_launcher" />
 
